# lab3-model-deployment

./: Dockerfile  Makefile  README.md  note.txt  pyproject.toml  start.py
app/: endpoints.py  settings.py  utils.py
